fix: fix content height overflow

--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -29,5 +29,6 @@
 @media screen and (max-width: 768px) {
   .content {
     margin: 1rem 0;
+    height: 75vh;
   }
 }
